--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
           <div id="mainListDiv" class="main_list">
             <ul class="navlinks">
-              <li><a href="../signIn-signup/signUp.html">Register</a></li>
+              <li><a href="./signIn-signup/signUp.html">Register</a></li>
               
             </ul>
           </div>
