--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
           <div id="mainListDiv" class="main_list">
             <ul class="navlinks">
-              <li><a href="./signIn-signup/signUp.html">Register</a></li>
+              <li><a href="./signUp.html">Register</a></li>
               
             </ul>
           </div>
@@ -47,7 +47,7 @@
                     your knowledge and try to prepare you for future job interviews . </p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     <button type="button" class="btn btn-primary btn-lg px-4 gap-3 " 
-                        fdprocessedid="7iw4kt"><a class="signInBtn" href="../signIn-signup/signIn.html">Sign In</a>
+                        fdprocessedid="7iw4kt"><a class="signInBtn" href="./signIn.html">Sign In</a>
                     </button>
                    
                 </div>
