--- a/signUp.html
+++ b/signUp.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./sign.css" />
+    <link rel="stylesheet" href="sign.css" />
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
         <div class="container">
           <div id="mainListDiv" class="main_list">
             <ul class="navlinks">
-              <li><a href="./index.html">Home</a></li>
+              <li><a href="../homepage/homepage.html">Home</a></li>
               
             </ul>
           </div>
@@ -101,7 +101,7 @@
             <div class="text-center text-lg-start mt-4 pt-2">
               <button type="submit" id="button-submit" class="btn .btn-2 custom-btn btn-primary btn-lg"
                 style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
-              <h5 class="small fw-bold mt-2 pt-1 mb-0">Already hava an account? <a href="./signIn.html"
+              <h5 class="small fw-bold mt-2 pt-1 mb-0">Already hava an account? <a href="signIn.html"
                   >Log in</a></h6>
             </div>
             </form>
@@ -111,5 +111,5 @@
     </section>
     </div>
   </body>
-  <script src="./signup.js"></script>
+  <script src="signup.js"></script>
 </html>
