--- a/index.html
+++ b/index.html
@@ -2,66 +2,158 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Zeyada" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Zeyada" rel="stylesheet" />
 
-    <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
 
 
 </head>
 
 <body>
-    <nav class="nav">
-        <div>
-          <a href="#"><h2 class="logo">Recrui<span>ter</span></h2></a>
-        </div>
+  <nav class="nav">
+    <div>
+      <a href="#">
+        <h2 id="name-h" class="logo">Recrui<span>ter</span></h2>
+      </a>
+    </div>
 
-        <div class="container">
-          <div id="mainListDiv" class="main_list">
-            <ul class="navlinks">
-              <li><a href="./signUp.html">Register</a></li>
-              
-            </ul>
-          </div>
-          <span class="navTrigger">
-            <i></i>
-            <i></i>
-            <i></i>
-          </span>
+    <div class="container">
+      <div id="mainListDiv" class="main_list">
+        <ul class="navlinks">
+          <li><a href="./signUp.html">Register</a></li>
+
+        </ul>
+      </div>
+      <span class="navTrigger">
+        <i></i>
+        <i></i>
+        <i></i>
+      </span>
+    </div>
+  </nav>
+  <!-- Hero -->
+  <header>
+
+    <div class="px-4 py-5 my-5 text-center" id="pos">
+      <img class="d-block mx-auto mb-4" src="image\draw2.webp" alt="" width="300" height="200">
+      <h1 class="display-5 fw-bold text-body-emphasis">let’s help you get employed</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4" id="position">Register with us for daily updated quizes to help you always refresh
+          your knowledge and try to prepare you for future job interviews . </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="button" class="btn btn-primary btn-lg px-4 gap-3 " fdprocessedid="7iw4kt"><a class="signInBtn"
+              href="./signIn.html">Sign In</a>
+          </button>
+
         </div>
-      </nav>
-    <!-- Hero -->
-    <header>
-   
-        <div class="px-4 py-5 my-5 text-center" id="pos">
-            <img class="d-block mx-auto mb-4" src="image\draw2.webp" alt="" width="300" height="200">
-            <h1 class="display-5 fw-bold text-body-emphasis">let’s help you get employed</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4" id="position">Register with us for daily updated quizes to help you always refresh 
-                    your knowledge and try to prepare you for future job interviews . </p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3 " 
-                        fdprocessedid="7iw4kt"><a class="signInBtn" href="./signIn.html">Sign In</a>
-                    </button>
-                   
-                </div>
+      </div>
+    </div>
+  </header>
+
+
+  <section class="about_section layout_padding2-top layout_padding-bottom" id="about">
+    <div class="design-box">
+      <img src="images/design-2.png" alt="">
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                About <span id="name-h">Recruiter</span>
+              </h2>
             </div>
+            <p>
+              Recruiter is a website for testing your knowledge in some positions like html or css we have a well
+              prepared quizzes that will be updated weekly with new questions and new positions in order to prepare you
+              for future job interviews
+            </p>
+
+          </div>
         </div>
-    </header>
-   
-    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="./homepage.js"></script>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img id="imgabout" src="assets\quiz.png" width="400px" height="300px" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <footer class=" text-center text-white" id="contact">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+
+        <!-- Twitter -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+
+        <!-- Google -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
+
+        <!-- Instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+
+        <!-- Linkedin -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+
+        <!-- Github -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright
+    </div>
+    <!-- Copyright -->
+  </footer>
+
+  <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="./homepage.js"></script>
 </body>
 
 </html>
