--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
           <a href="#"><h2 class="logo">Recrui<span>ter</span></h2></a>
         </div>
 
-        <div class="container">
           <div id="mainListDiv" class="main_list">
             <ul class="navlinks">
               <li><a href="./signUp.html">Register</a></li>
               
             </ul>
-          </div>
+          
           <span class="navTrigger">
             <i></i>
             <i></i>
@@ -61,7 +60,7 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="./homepage.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
