--- a/signUp.html
+++ b/signUp.html
@@ -17,13 +17,11 @@
           <a href="#"><h2 class="logo">Recrui<span>ter</span></h2></a>
         </div>
 
-        <div class="container">
           <div id="mainListDiv" class="main_list">
             <ul class="navlinks">
-              <li><a href="../homepage/homepage.html">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               
             </ul>
-          </div>
           <span class="navTrigger">
             <i></i>
             <i></i>
@@ -99,9 +97,8 @@
             </div>
   
             <div class="text-center text-lg-start mt-4 pt-2">
-              <button type="submit" id="button-submit" class="btn .btn-2 custom-btn btn-primary btn-lg"
-                style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign Up</button>
-              <h5 class="small fw-bold mt-2 pt-1 mb-0">Already hava an account? <a href="signIn.html"
+              <button type="submit" id="button-submit" class="btn .btn-2 custom-btn btn-primary btn-lg">Sign Up</button>
+              <h5 class="small fw-bold mt-2 pt-1 mb-0">Already hava an account? <a href="./signIn.html"
                   >Log in</a></h6>
             </div>
             </form>
@@ -111,5 +108,5 @@
     </section>
     </div>
   </body>
-  <script src="signup.js"></script>
+  <script src="./signup.js"></script>
 </html>
