--- a/failed.html
+++ b/failed.html
@@ -249,6 +249,6 @@
       </div>
     </div>
 
-    <script src="./passFailed_majdi.js"></script>
+    <script src="./failed.js"></script>
   </body>
 </html>
